# image_cli

./: Cargo.toml  README.md
src/magic/: errors.rs  mod.rs  resize.rs  stat.rs
