[package]
name = "image_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "imgic"
path = "./src/magic/mod.rs"
[[bin]]
name = "cli"
path = "./src/cli.rs"
[dependencies]
image = "0.24.1"
structopt = "0.3.26"
